# aoc2023

./: README.md  setupDay.py
01/: 1.py  2.py
09/: 1.py
cpp/: CMakeLists.txt  createYear.py  utils.cpp  utils.h
cpp/01/: p1.cpp  p2.cpp
cpp/02/: p1.cpp  p2.cpp
cpp/03/: p1.cpp  p2.cpp
cpp/04/: p1.cpp  p2.cpp
cpp/05/: p1.cpp
cpp/06/: p1.cpp
cpp/07/: p1.cpp
cpp/08/: p1.cpp
cpp/09/: p1.cpp
cpp/10/: p1.cpp
cpp/11/: p1.cpp
cpp/12/: p1.cpp  p2.cpp
cpp/13/: p1.cpp
cpp/14/: p1.cpp
cpp/15/: p1.cpp
cpp/16/: p1.cpp
cpp/17/: p1.cpp
cpp/18/: p1.cpp
cpp/19/: p1.cpp
cpp/20/: p1.cpp
cpp/21/: p1.cpp
cpp/22/: p1.cpp
cpp/23/: p1.cpp
cpp/24/: p1.cpp
cpp/25/: p1.cpp
py/: .gitignore  setupDay.py
py/01/: 2.py
py/02/: 1.py  2.py
py/03/: 1.py  2.py
py/04/: 1.py  2.py
py/05/: 1.py  2.py
py/06/: 1.py  2.py
py/07/: 1.py  2.py
py/08/: 1.py  2.py
py/09/: 1.py  2.py
py/10/: 1.py  2.py  realMap.txt  time1.py  time2.py
py/11/: 1.py  2.py
py/12/: 1.py  2.py  cry.py
py/13/: 1.py  2.py  i3.txt
py/14/: 1.py  2.py
py/15/: 1.py  2.py
py/16/: 1.py  2.py
py/17/: 1.py  2.py
py/18/: 1.py  1_2.py
py/19/: 1.py  2.py
py/20/: 1.py  1_2.py  2_2.py  cry.txt  graph.txt  i4.txt  i5.txt
py/21/: 2.py  2_2.py  2_3.py  notes.txt
py/22/: 1.py  2.py
py/23/: 1.py  2.py  graph.py  graph.txt
py/24/: 1.py  2.py
py/25/: 1.py  1_2.py  graph.py
